<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titulo_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_login"
            android:textAlignment="center"
            android:textAppearance="@style/SmartFeedTitle"
            android:layout_marginTop="61dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userTextField"
            android:layout_width="280dp"
            android:layout_marginLeft="58dp"
            android:layout_height="wrap_content"
            android:hint="@string/usuario_label"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="90dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuario_placeholder"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="58dp"
            android:hint="@string/password_label"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="56dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_placeholder"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="56dp"
            android:backgroundTint="@color/dark_yellow"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/boton_enviar"
            android:textColor="@color/dark_purple"
            android:textSize="32sp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            android:onClick="goToDashboardActivity"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/olvido_contrasena"
            android:fontFamily="@font/raleway_light"
            android:textColor="@color/dark_purple"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/raleway_bold"
            android:textColor="@color/dark_purple"
            android:textSize="36sp"
            android:textAlignment="center"
            android:onClick="goToRegisterActivity"/>

    </LinearLayout>
</ScrollView>