<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"
            />

        <TextView
            android:id="@+id/titulo_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido_titulo"
            android:textAlignment="center"
            android:textAppearance="@style/SmartFeedTitle"
            android:layout_marginTop="-12dp"
            />

        <TextView
            android:id="@+id/texto_bienvenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido_texto"
            android:fontFamily="@font/raleway_semibold"
            android:textSize="16dp"
            android:textAlignment="center"
            android:layout_marginTop="32dp"
            />

        <Button
            android:id="@+id/btn_continuar_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/dark_yellow"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/boton_continuar"
            android:textColor="@color/dark_purple"
            android:textSize="32sp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            android:onClick="goToProductRegisterActivity"
            />

    </LinearLayout>
</ScrollView>