<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titulo_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_alimentador"
            android:textAlignment="center"
            android:textAppearance="@style/SmartFeedTitle"
            android:layout_marginTop="61dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_alimentador_text"
            android:fontFamily="@font/raleway_regular"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:padding="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/identificadorTextField"
            android:layout_width="280dp"
            android:layout_marginLeft="58dp"
            android:layout_height="wrap_content"
            android:hint="Identificador"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Alimentador Poli"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipoAlimentoTextField"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="58dp"
            android:hint="Tipo alimento"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Proplan HA"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/capacidadTextField"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="58dp"
            android:hint="Capacidad"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2 kg"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/modeloTextField"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="58dp"
            android:layout_marginTop="16dp"
            android:hint="Modelo"
            app:boxStrokeColor="@color/black"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/modeloTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/seleccionar_modelo"
                android:clickable="true"
                android:focusable="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            app:thumbTint="@color/white"
            app:trackTint="@color/dark_purple"
            android:text="@string/dispensador_agua_text"
            android:fontFamily="@font/raleway_regular"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:textAlignment="center"
            android:layout_marginRight="66dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btn_enviar_register_alimentador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="56dp"
            android:backgroundTint="@color/dark_yellow"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/boton_enviar"
            android:textColor="@color/dark_purple"
            android:textSize="32sp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            android:onClick="goToProductRegisterActivity"/>

    </LinearLayout>

</ScrollView>